--- a/WorkTimer/pom.xml
+++ b/WorkTimer/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>fsharp</groupId>
   <artifactId>WorkTimer</artifactId>
-  <version>2.0</version>
+  <version>2.1</version>
   <name>WorkTimer</name>
   <description>Small Comand Line Timer Utility</description>
   <build>
@@ -19,6 +19,18 @@
         <configuration>
           <source>1.8</source>
           <target>1.8</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>2.4</version>
+        <configuration>
+          <archive>
+            <manifest>
+              <mainClass>com.fsharp.timer.WorkTimer</mainClass>
+            </manifest>
+          </archive>
         </configuration>
       </plugin>
     </plugins>
